--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     </div>
     <div class="web-app-features">
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/home.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/home.svg" alt="">
         <h3>Home</h3>
       </div>
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/account-details.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/account-details.svg" alt="">
         <h3>Profile</h3>
       </div>
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/message-reply.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/message-reply.svg" alt="">
         <h3>Messages</h3>
       </div>
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/clock-time-nine.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/clock-time-nine.svg" alt="">
         <h3>History</h3>
       </div>
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/file.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/file.svg" alt="">
         <h3>Tasks</h3>
       </div>
       <div class="row-item">
-        <img class="icon color" src="./assets/icons/account-multiple.svg" alt="">
+        <img class="m-28 icon color" src="./assets/icons/account-multiple.svg" alt="">
         <h3>Communities</h3>
       </div>
     </div>
@@ -54,6 +54,32 @@
       </div>
     </div>
   </div>
-  <div class="main-content"></div>
+  <div class="main-content">
+    <div class="header">
+      <div class="row-1">
+        <div>
+          <img class="icon m-12" src="./assets/icons/magnify.svg" alt="">
+          <input class="input-text-bar" type="text">
+        </div>
+        
+        <div class="m-28">
+          <img class="icon m-12" src="./assets/icons/bell-outline.svg" alt="">
+          <img class="profile-pic-small m-20" src="./assets/images/pfp5.jpg" alt="">
+          <p class="profile-name-header bold">Morgan Oakley</p>
+        </div>
+        
+      </div>
+      <div class="row-2">
+        <img class="profile-pic-big m-20" src="./assets/images/pfp5.jpg" alt="">
+        <div class="greetings">
+          <p class="small-text bold">Hi there,</p>
+          <p class="big-text bold">Morgan Oakley (@morgan)</p>
+        </div>
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
