complete the design

--- a/index.html
+++ b/index.html
@@ -80,6 +80,129 @@
         <button>Share</button>
       </div>
     </div>
+    <div class="feed">
+      <div class="grid">
+        <p class="title">Your Projects</p>
+        <div class="main-grid">
+          <div class="grid-item">
+            <div class="card-details">
+              <p class="card-title">Super Cool Project</p>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="card-helpers">
+              <img class="icon m-12" src="./assets/icons/star-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/eye-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/share-variant.svg" alt="">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card-details">
+              <p class="card-title">Super Cool Project</p>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="card-helpers">
+              <img class="icon m-12" src="./assets/icons/star-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/eye-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/share-variant.svg" alt="">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card-details">
+              <p class="card-title">Super Cool Project</p>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="card-helpers">
+              <img class="icon m-12" src="./assets/icons/star-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/eye-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/share-variant.svg" alt="">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card-details">
+              <p class="card-title">Super Cool Project</p>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="card-helpers">
+              <img class="icon m-12" src="./assets/icons/star-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/eye-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/share-variant.svg" alt="">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card-details">
+              <p class="card-title">Super Cool Project</p>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                
+              </p>
+            </div>
+            <div class="card-helpers">
+              <img class="icon m-12" src="./assets/icons/star-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/eye-plus-outline.svg" alt="">
+              <img class="icon m-12" src="./assets/icons/share-variant.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="extras">
+        <p class="title">Announcements</p>
+        <div class="announcements">
+          <div class="single-announcement">
+            <P class="announcement-title">Site Maintenance</P>
+            <P>Nunc vitae urna vel enim blandit luctus sit amet eu est. Aliquam erat volutpat. Suspendisse at tempor massa. Nullam viverra feugiat consectetur</P>
+            <hr>
+          </div>
+          <div class="single-announcement">
+            <P class="announcement-title">Community Share Day</P>
+            <P>Nunc vitae urna vel enim blandit luctus sit amet eu est. Aliquam erat volutpat. Suspendisse at tempor massa. Nullam viverra feugiat consectetur</P>
+            <hr>
+          </div>
+          <div class="single-announcement">
+            <P class="announcement-title">Updated Privacy Policy</P>
+            <P>Nunc vitae urna vel enim blandit luctus sit amet eu est. Aliquam erat volutpat. Suspendisse at tempor massa. Nullam viverra feugiat consectetur</P>
+          </div>
+        </div>
+        <p class="title">Trending</p>
+        <div class="trending">
+          <div class="single-trending">
+            <img class="profile-pic-small m-20" src="./assets/images/pfp1.jpg" alt="">
+            <div class="single-trending-info">
+              <p class="bold">@tegan</p>
+              <p>World Peace Builder</p>
+            </div>
+          </div>
+          <div class="single-trending">
+            <img class="profile-pic-small m-20" src="./assets/images/pfp2.jpg" alt="">
+            <div class="single-trending-info">
+              <p class="bold">@morgan</p>
+              <p>Super Cool Project</p>
+            </div>
+          </div>
+          <div class="single-trending">
+            <img class="profile-pic-small m-20" src="./assets/images/pfp3.jpg" alt="">
+            <div class="single-trending-info">
+              <p class="bold">@kendall</p>
+              <p>Life Changing App</p>
+            </div>
+          </div>
+          <div class="single-trending">
+            <img class="profile-pic-small m-20" src="./assets/images/pfp4.jpg" alt="">
+            <div class="single-trending-info">
+              <p class="bold">@alex</p>
+              <p>No Traffic Maker</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
